<resources>
    <string name="app_name">NeRecipe</string>
    <string name="add_recipe">Add new recipe</string>
    <string name="author">Author:</string>
    <string name="option" translatable="false">Menu</string>
    <string name="favorites">Favorites</string>
    <string name="remove">Remove</string>
    <string name="menu_edit">Edit</string>
    <string name="recipe">Recipe</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="step">Step</string>
    <string name="image_of_recipe">Image of step</string>
    <string name="back">Back</string>
    <string name="edit_recipe">Edit recipe</string>
    <string name="insertRecipeName">Insert recipe name</string>
    <string name="recipe_name_hint">enter recipe name</string>
    <string name="add_step">Add step</string>
    <string name="recipe_step_description_hint">Enter recipe step description</string>
    <string name="save">Save</string>
    <string name="select_category">Select category:</string>
    <string name="number_of_step_description_hint">Enter number of step</string>
    <string name="recipe_step_url_hint">Enter URL of image</string>
    <string name="save_step">Save step</string>
    <string name="title_add_edit_recipe">Create/edit</string>
    <string name="select_all">Select all</string>
    <string name="apply" >Apply</string>

</resources>