<?xml version="1.0" encoding="utf-8"?>

    <menu xmlns:android="http://schemas.android.com/apk/res/android">
        <item
            android:id="@+id/recipe_list"
            android:enabled="true"
            android:icon="@drawable/ic_list_24"
            android:title="@string/recipe"/>
        <item
            android:id="@+id/favorites_list"
            android:enabled="true"
            android:icon="@drawable/ic_favorite_24"
            android:title="@string/favorites"/>
        <item
            android:id="@+id/add_recipe"
            android:enabled="true"
            android:icon="@drawable/ic_add_24dp"
            android:title="@string/add_recipe"/>
        <item
            android:id="@+id/search_recipe"
            android:enabled="true"
            android:icon="@drawable/ic_search_24"
            android:title="@string/search"/>
    <item
        android:id="@+id/filter_recipe"
        android:enabled="true"
        android:icon="@drawable/ic_filter_24"
        android:title="@string/filter"/>
    </menu>