<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RecipeChangeContentFragment">


    <EditText
        android:id="@+id/insert_recipe_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/recipe_name_hint"
        android:hint="@string/recipe_name_hint"
        android:inputType="textMultiLine"
        android:lineSpacingExtra="8dp"
        android:padding="@dimen/common_spacing"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/category"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/insert_recipe_name"
        tools:Text="kitchen category" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/author"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@id/authorName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/category" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/authorName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="8dp"
        android:ellipsize="end"
        android:singleLine="true"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/author"
        app:layout_constraintTop_toBottomOf="@id/category"
        tools:text="Student of netology" />


    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="author, authorName"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="126dp" />

    <EditText
        android:id="@+id/insert_step_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/recipe_step_description_hint"
        android:hint="@string/recipe_step_description_hint"
        android:inputType="textMultiLine"
        android:lineSpacingExtra="8dp"
        android:padding="@dimen/common_spacing"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/author" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recipeListRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
        app:layout_constraintTop_toBottomOf="@id/insert_step_description"
        tools:ignore="NotSibling"
        tools:listitem="@layout/recipe_steps">

    </androidx.recyclerview.widget.RecyclerView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:contentDescription="@string/add_step"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation_detail_recipe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_add_24dp" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation_detail_recipe"
        style="@style/Widget.MaterialComponents.BottomNavigationView.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/bottom_navigation_edit_recipe"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>